# googleadsquerytool

./: .gitignore  README.md  googleadsquerytool.py  pyproject.toml
